# Practicas_POO

./: .gitignore  README.md
Examen_Parcial_1/: Articulo.cpp  Articulo.h  CMakeLists.txt  Cliente.cpp  Cliente.h  Factura.cpp  Factura.h  main.cpp
Practica_0/: CMakeLists.txt  main.cpp
Practica_0_Frst_Attmpt/: CMakeLists.txt
Practica_0_Scnd_Atttmpt/: main.cpp
Practica_2_3/: CMakeLists.txt  Fecha.cpp  Fecha.h  Garito.cpp  Garito.h  ParametroNoValido.cpp  ParametroNoValido.h  Temazo.cpp  Temazo.h  djutils.cpp  djutils.h  main.cpp
Practica_4/: CMakeLists.txt  Droide.cpp  Droide.h  Informe.cpp  Informe.h  Piloto.cpp  Piloto.h  StarFighter.cpp  StarFighter.h  main.cpp
Practica_5/: CMakeLists.txt  Droide.cpp  Droide.h  Escuadron.cpp  Escuadron.h  Informe.cpp  Informe.h  Pieza.cpp  Pieza.h  Piloto.cpp  Piloto.h  StarFighter.cpp  StarFighter.h  main.cpp
Practica_6/: CMakeLists.txt  Mutante.cpp  (+10 more)
Practica_9/: Bloque.cpp  Bloque.h  CMakeLists.txt  Cofre.cpp  Cofre.h  Contenedor.cpp  Contenedor.h  ContenedorItems.cpp  ContenedorItems.h  EmptyContainer.cpp  EmptyContainer.h  Espada.cpp  Espada.h  Filete.cpp  Filete.h  Inventario.cpp  Inventario.h  Item.h  ItemApilable.cpp  ItemApilable.h  main.cpp
Simulacro_examen_practicas_2/: CMakeLists.txt  DataCenter.cpp  DataCenter.h  DataCenterException.h  Dispositivo.cpp  Dispositivo.h  Generador.cpp  Generador.h  RackAlmacenamiento.cpp  RackAlmacenamiento.h  RackServidores.cpp  RackServidores.h  main.cpp
Simulacro_examen_practicas_2/Punto_de_partida/CloudPOO_v2_ptoPartida/: CloudPOO.puml  DataCenter.h  Dispositivo.h  main.cpp
(+39 files in other folders)
