cmake_minimum_required(VERSION 3.24)
project(Practica_9)

set(CMAKE_CXX_STANDARD 17)

add_executable(Practica_9 main.cpp Contenedor.h EmptyContainer.h EmptyContainer.cpp Cofre.h Cofre.cpp Item.h ItemApilable.h ItemApilable.cpp Inventario.h Inventario.cpp Filete.h Filete.cpp Espada.h Espada.cpp Bloque.h Bloque.cpp)
